force-app/main/default/objects/vlocity_cmt__AsyncExecuteJobUpdate__e/vlocity_cmt__AsyncExecuteJobUpdate__e.object-meta.xml
<CustomObject>
    <description>Controls the progress of each queueable job.</description>
    <label>Async Execute Job Update</label>
    <pluralLabel>Async Execute Job Updates</pluralLabel>
</CustomObject>