force-app/main/default/objects/vlocity_cmt__AsyncExecuteJobUpdate__e/fields/vlocity_cmt__AsyncProcessJobId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AsyncProcessJobId__c</fullName>
    <description>ID of the Async Process Job record.</description>
    <label>Async Process Job</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>