force-app/main/default/objects/vlocity_cmt__AsyncExecuteJobUpdate__e/fields/vlocity_cmt__NumberOfItemsProcessed__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__NumberOfItemsProcessed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of items processed by the async job.</description>
    <label>Number of Items Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>